--- a/Question1.ipynb
+++ b/Question1.ipynb
@@ -393,8 +393,14 @@
    "source": [
     "%aimport utils.grid_search\n",
     "from utils.grid_search import grid_search\n",
+    "\n",
     "arg_dict = {'kernel':'poly', 'degree':2, 'coef0':1.0}\n",
-    "a = grid_search(arg_dict = arg_dict, X=X, Y=Y, gamma_list = [1,2], c_list =[1,2])"
+    "\n",
+    "#for polynomial\n",
+    "for degree in [2,3,4]:\n",
+    "    arg_dict['degree'] = degree\n",
+    "    a = grid_search(arg_dict = arg_dict, X=X, Y=Y, gamma_list = np.linspace(0.5,20,25), c_list = np.linspace(1,20,25))\n",
+    "    print(f'For degree {degree}, the optimal metrics are: {calc_avg_metrics(a)}')"
    ]
   },
   {
@@ -416,7 +422,10 @@
     }
    ],
    "source": [
-    "print(a)"
+    "#for linear\n",
+    "arg_dict = {'kernel':'linear'}\n",
+    "a = grid_search(arg_dict = arg_dict, X=X, Y=Y, gamma_list = [1], c_list = np.linspace(1,20,25))\n",
+    "print(f'For linear, the optimal metrics are: {calc_avg_metrics(a)}')"
    ]
   },
   {
@@ -440,7 +449,10 @@
     }
    ],
    "source": [
-    "calc_avg_metrics(a)"
+    "#gaussian\n",
+    "arg_dict = {'kernel':'rbf', 'coef0':1.0}\n",
+    "a = grid_search(arg_dict = arg_dict, X=X, Y=Y, gamma_list = np.linspace(0.5,20,25), c_list = np.linspace(1,20,25))\n",
+    "print(f'For Gaussian Kernel, the optimal metrics are: {calc_avg_metrics(a)}')"
    ]
   },
   {
